--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "vue": "^3.1.0-0",
+        "@vue/compat": "^3.1.0-0",        
+        "vue-loader": "^16.2.0",
+        "vue-template-compiler": "^2.6.12",
+        "@vue/compiler-sfc": "^3.1.0-0"
     }
 }
