--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
       // this enables stricter inference for data properties on `this`
       "strict": true,
       "jsx": "preserve",
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "allowJs": true
     }
+    
 }
