--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "vue": "^3.1.0-0",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "primeicons": "^5.0.0",
+        "primevue": "^3.15.0"
     }
 }
