--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "autoprefixer": "10.4.5",
         "primeicons": "^5.0.0",
         "primevue": "^3.15.0"
     }
