--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "autoprefixer": "10.4.5",
         "primeicons": "^5.0.0",
-        "primevue": "^3.15.0"
+        "primevue": "^3.15.0",
+        "vuex": "^4.0.2"
     }
 }
